--- a/otel-application/package.json
+++ b/otel-application/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "@opentelemetry/instrumentation-express": "^0.41.1",
-    "@opentelemetry/resource-detector-aws": "^1.5.2",
+    "@aws-sdk/client-sts": "^3.635.0",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.48.0",
     "@opentelemetry/id-generator-aws-xray": "^1.2.1",
     "@opentelemetry/instrumentation-aws-sdk": "^0.38.1",
+    "@opentelemetry/instrumentation-express": "^0.41.1",
     "@opentelemetry/instrumentation-http": "^0.48.0",
     "@opentelemetry/propagator-aws-xray": "^1.3.1",
+    "@opentelemetry/resource-detector-aws": "^1.5.2",
     "@opentelemetry/sdk-node": "^0.48.0",
     "express": "^4.19.2"
   }
