feat: add alb access logging & connection logging

--- a/fis-testing/manifest/webapp.yml
+++ b/fis-testing/manifest/webapp.yml
@@ -125,6 +125,14 @@ metadata:
     alb.ingress.kubernetes.io/healthy-threshold-count: "2"
     alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
     alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
+    alb.ingress.kubernetes.io/load-balancer-attributes: >
+      deletion_protection.enabled=true,
+      access_logs.s3.enabled=true,
+      access_logs.s3.bucket=myapp-bucket-813298391823,
+      access_logs.s3.prefix=accesslog,
+      connection_logs.s3.enabled=true,
+      connection_logs.s3.bucket=myapp-bucket-813298391823,
+      connection_logs.s3.prefix=conenctionlog
 spec:
   ingressClassName: alb
   rules:
